adding views to entries

--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -1,5 +1,6 @@
 
 <div id="<%= dom_id entry %>">
+  
   <p>
     <strong>Jméno klienta:</strong><br>
     <%= entry.name %>
@@ -19,5 +20,6 @@
     <strong>Zápis ze sezení:</strong><br>
     <%= entry.body %>
   </p>
+  <p>počet zobrazení: <%= entry.views %></p>
 
 </div>
