--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,17 +15,17 @@
         <li class="nav-item">
             <%= link_to "O nás", about_path, class:"nav-link"%>
         </li>
-        <%# <li class="nav-item">
+        <li class="nav-item">
             <%= link_to "Koučovací zápisky", entries_path, class:"nav-link"%>
-        </li> %>
+        </li>
         
         
       </ul>
 
-      <%# <ul class="navbar-nav">
+      <ul class="navbar-nav">
         <%= render "user/session_manager" %>
       
-      </ul> %>
+      </ul>
       
     </div>
   </div>
