--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <body class="bg-light">
     <header>
       <%= render "layouts/navbar" %>
+      <%= render "layouts/alerts" %>
     </header>
 
     <main>
