--- a/app/views/user/_session_manager.html.erb
+++ b/app/views/user/_session_manager.html.erb
@@ -1,4 +1,4 @@
-<%# <% if current_user %> %>
+<% if current_user %>
 
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -11,17 +11,17 @@
         <li><%= link_to "Zobrazit profil", root_path, class:"dropdown-item" %> </li>
         <li><%= link_to "Upravit profil", root_path, class:"dropdown-item" %> </li>
         <li><hr class="dropdown-divider"></li>
-        <%# <li><%= button_to "Odhlásit se", destroy_user_session_path, method: :delete, class:"dropdown-item"%></li> %>
+        <li><%= button_to "Odhlásit se", destroy_user_session_path, method: :delete, class:"dropdown-item"%></li>
     </ul>
 </li>
 
-<%# <% else %> %>
+<% else %>
 
-<%# <li class="nav-item">
+<li class="nav-item">
     <%= link_to "Přihlásit se",  new_user_session_path, class:"nav-link"%>
-</li> %>
-<%# <li class="nav-item">
+</li>
+<li class="nav-item">
     <%= link_to "Registrovat se", new_user_registration_path, class:"nav-link"%>
-</li> %>
+</li>
 
-<%# <% end %> %>
+<% end %>
