--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -21,5 +21,6 @@
     <%= entry.body %>
   </p>
   <p>počet zobrazení: <%= entry.views %></p>
+  <p>vytvořeno uživatelem <%= entry.user.email %></p>
 
 </div>
