--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
   <div class="col-md-5 p-lg-5 mx-auto my-5">
     <h1 class="display-4 fw-normal">Online Coach</h1>
     <p class="lead fw-normal">Platforma pro moderní kouče na správu záznamů z koučovacích sezení s klienty. Všechno pohromadě na jednom místě.</p>
-    <%= link_to "Registrovat se", root_path, class: "btn btn-outline-primary"%>
-    <%= link_to "Přihlásit se", root_path, class: "btn btn-outline-secondary"%>
+    <%= link_to "Registrovat se", new_user_registration_path, class: "btn btn-outline-primary"%>
+    <%= link_to "Přihlásit se", new_user_session_path, class: "btn btn-outline-secondary"%>
   </div>
 </div>
 
