editing users profiles

--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -21,6 +21,6 @@
     <%= entry.body %>
   </p>
   <p>počet zobrazení: <%= entry.views %></p>
-  <p>vytvořeno uživatelem <%= entry.user.email %></p>
+  <p>vytvořeno uživatelem <%= link_to entry.user.name, user_path(entry.user) %></p>
 
 </div>
