--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,55 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 bg-light">
+  <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
+
+<h2>Upravit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email, value: "E-mail:" %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
+<br>
   <div class="field">
-    <%= f.label :name, value: "jméno"  %><br />
+    <%= f.label :name, value: "Jméno:"  %><br />
     <%= f.text_field :name%>
   </div>
-
+<br>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password, value: "Heslo: " %> <i>(ponechte prázdné, pokud ho nechcete změnit)</i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em>minimálně <%=  @minimum_password_length %> znaků</em>
     <% end %>
   </div>
-
+<br>
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation, value: "Potvrďte heslo:" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
-
+<br>
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password, value:"Zadejte současné heslo:" %> <i>(k potvrzení změn potřebujeme vaše aktuální heslo)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
-
+<br>
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Aktualizovat", class:"btn btn-success" %>
   </div>
 <% end %>
+<br><br>
+<h3>Smazat účet</h3>
 
-<h3>Cancel my account</h3>
+<p>Nelíbí se vám tu? <%= button_to "Smazat účet", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger" %></p>
+<br>
+<%= link_to "zpátky", :back, class:"main-link" %>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+  </div>
+</div>
