--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,40 @@
-<h2>Sign up</h2>
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+  <div class="col-md-5 p-lg-5 mx-auto my-5 bg-custom-login">
 
+<h2>Zaregistrovat se:</h2>
+<br>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email, value: "E-mail:" %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
+<br>
   <div class="field">
-    <%= f.label :name, value: "jméno"  %><br />
+    <%= f.label :name, value: "Jméno:"  %><br />
     <%= f.text_field :name%>
   </div>
-
+<br>
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password, value: "Heslo:" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(minimálně <%= @minimum_password_length %> znaků)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation, value: "Potvrzení hesla:" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
-
+<br>
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Zaregistrovat se", class:"btn btn-success"  %>
   </div>
 <% end %>
-
+<br><br>
 <%= render "devise/shared/links" %>
+
+  </div>
+</div>
