--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,3 +1,6 @@
+<div class="position-relative overflow-hidden p-5 p-md-5 m-md-3 bg-light">
+  <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
+
 <p style="color: green"><%= notice %></p>
 
 <div class="container">
@@ -5,7 +8,6 @@
 
 <p>V této části najdete všechny zápisy z klientských sezení.</p>
 <p class="entries text-end"> <%= link_to "Vytvořit nový zápis", new_entry_path, class: "btn btn-warning" %> <br></p>
-
 
 
 <div id="entries">
@@ -16,7 +18,8 @@
     </p>
   <% end %>
 </div>
+</div>
 
 
-
+  </div>
 </div>
