--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,4 +1,7 @@
-<div class="container">
+<div class="position-relative overflow-hidden p-5 p-md-5 m-md-3 bg-light">
+  <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
+
+<div class="containe  r">
 <br>
 <h1>Nový zápis ze sezení</h1>
 <br>
@@ -9,4 +12,7 @@
 <div class="text-end">
   <%= link_to "Zpět na všechny zápisy", entries_path, class: "btn btn-warning" %>
 </div>
+</div>
+
+  </div>
 </div>
