--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 bg-light">
+  <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
+
 <div class="container">
 <br>
 <h1>Upravit zápis</h1>
@@ -9,5 +12,8 @@
 <div class="text-end">
   <%= link_to "Ukázat zápis", @entry, class: "btn btn-success" %> |
   <%= link_to "Zpět na všechny zápisy", entries_path, class: "btn btn-warning" %>
+</div>
+</div>
+
 </div>
 </div>
