--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
-<footer class="container py-5">
+<footer class="container py-5 text-bottom">
 <div class="container">
   <div class="row">
     <div class="col">
       <p class="text-center">
-      <%= mail_to "jezikova.v@email.cz", class: "footer-link" %>
+      <%= link_to "O nás", about_path, class: "footer-link" %>
       </p>
     </div>
     <div class="col order-5">
