--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       <%= yield %>
     </main>
 
-    <footer class="bg-dark">
+    <footer class="bg-dark fixed-bottom sticky-footer">
       <%= render "layouts/footer" %>
     </footer>
 
