--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,8 @@
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 bg-light">
   <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
 
-<h2>Upravit <%= resource_name.to_s.humanize %></h2>
+<%# <h2>Upravit <%= resource_name.to_s.humanize %></h2> 
+<h2>Upravit profil</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -17,7 +18,7 @@
   </div>
 <br>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div>V současné době se čeká na potvrzení pro: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div class="field">
