--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
+<div class="position-relative overflow-hidden p-5 p-md-5 m-md-3 bg-light">
+  <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
 <div class="container">
 <br>
 <h1>O aplikaci CoachOnline</h1>
@@ -15,4 +17,6 @@ Jít na <%= link_to "LinkedIn profil", "https://www.linkedin.com/in/veronika-je%
 
 
 <br><br>
+</div>
+</div>
 </div>
