--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,13 @@
+<% if current_user %>
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+  <div class="col-md-5 p-lg-5 mx-auto my-5">
+    <h1 class="display-4 fw-normal">Online Coach</h1>
+    <p class="lead fw-normal">Vítejte na platformě pro moderní kouče.<br>Co si přejete udělat?</p>
+    <%= link_to "Vytvořit nový zápis", new_entry_path, class: "btn btn-outline-primary"%>
+    <%= link_to "Prohlédnout zápisy", entries_path, class: "btn btn-outline-secondary"%>
+  </div>
+</div>
+<% else %>
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
   <div class="col-md-5 p-lg-5 mx-auto my-5">
     <h1 class="display-4 fw-normal">Online Coach</h1>
@@ -6,5 +16,7 @@
     <%= link_to "Přihlásit se", new_user_session_path, class: "btn btn-outline-secondary"%>
   </div>
 </div>
+
+<% end %>
 
   
