--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,5 +1,8 @@
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 bg-light">
+  <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
 <% if user_signed_in? %>
-  <h1><%= current_user.name %></h1>
+  <h1>Vítejte, <%= current_user.name %></h1>
 <% end %>
 
-test
+</div>
+</div>
