--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: entry) do |form| %>
   <% if entry.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(entry.errors.count, "error") %> prohibited this entry from being saved:</h2>
+      <h2>Počet chyb neumožňující uložení zápisu: <%= entry.errors.count %></h2>
 
       <ul>
         <% entry.errors.each do |error| %>
