--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,7 +1,7 @@
 <div class="position-relative overflow-hidden p-5 p-md-5 m-md-3 bg-light">
   <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
 
-<p style="color: green"><%= notice %></p>
+<%# <p style="color: green"><%= notice %></p>
 
 <div class="container">
 <h1>Zápisky ze sezení</h1>
