add session length

--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -12,6 +12,11 @@
   </p>
 
   <p>
+    <strong>Délka sezení:</strong><br>
+    <%= entry.length %> minut
+  </p>
+
+  <p>
     <strong>Číslo sezení:</strong><br>
     <%= entry.session %>
   </p>
