--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -16,6 +16,13 @@
     <%= form.text_field :name, placeholder: "jméno a příjmení", class:"input-entry" %>
   </div>
 <br>
+
+<div>
+    <%= form.label :length, value: "Vyberte délku sezení:" %>
+    <%= form.select :length, options_for_select([["15 minut", 15], ["30 minut", 30], ["45 minut", 45], ["60 minut", 60], ["90 minut", 90], ["120 minut", 120]], selected: @entry.length) %>
+</div>
+
+<br>
   <div>
     <%= form.label :title, style: "display: block", value: "Téma sezení:" %>
     <%= form.text_field :title, placeholder: "o čem bylo sezení", class:"input-entry" %>
