--- a/app/views/user/_session_manager.html.erb
+++ b/app/views/user/_session_manager.html.erb
@@ -7,6 +7,7 @@
     <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="navbarDropdown">
         <li><%= link_to "Nový zápis", new_entry_path, class:"dropdown-item" %> </li>
         <li><%= link_to "Všechny zápisy", entries_path, class:"dropdown-item" %> </li>
+        <li><%= link_to "Přehled", overview_path, class:"dropdown-item" %> </li>
         <li><hr class="dropdown-divider"></li>
         <li><%= link_to "Zobrazit profil", current_user, class:"dropdown-item" %> </li>
         <li><%= link_to "Upravit profil", edit_user_registration_path, class:"dropdown-item" %> </li>
