--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,9 @@
   <div class="col-md-5 p-lg-5 mx-auto my-5">
     <h1 class="display-4 fw-normal">Online Coach</h1>
     <p class="lead fw-normal">Vítejte na platformě pro moderní kouče.<br>Co si přejete udělat?</p>
-    <%= link_to "Vytvořit nový zápis", new_entry_path, class: "btn btn-outline-primary"%>
+    <%= link_to "Vytvořit zápis", new_entry_path, class: "btn btn-outline-primary"%>
     <%= link_to "Prohlédnout zápisy", entries_path, class: "btn btn-outline-secondary"%>
+    <%= link_to "Přehled", overview_path, class: "btn btn-outline-success"%>
   </div>
 </div>
 <% else %>
@@ -14,6 +15,7 @@
     <p class="lead fw-normal">Platforma pro moderní kouče na správu záznamů z koučovacích sezení s klienty. Všechno pohromadě na jednom místě.</p>
     <%= link_to "Registrovat se", new_user_registration_path, class: "btn btn-outline-primary"%>
     <%= link_to "Přihlásit se", new_user_session_path, class: "btn btn-outline-secondary"%>
+    
   </div>
 </div>
 
