--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,6 +18,11 @@
         <li class="nav-item">
             <%= link_to "Koučovací zápisky", entries_path, class:"nav-link"%>
         </li>
+
+        <li class="nav-item">
+            <%= link_to "Přehled", overview_path, class:"nav-link"%>
+        </li>
+        
         
         
       </ul>
