--- a/app/views/overview/index.html.erb
+++ b/app/views/overview/index.html.erb
@@ -6,7 +6,7 @@
 <h3>Statistiky uživatele <%= current_user.name %>:</h3><br>
 <p>Celkový počet sezení: <%= @entries_summary %></p>
 <p>Průměrná délka v minutách: <%= @average_length %></p>
-<p>Medián: </p>
+<p>Medián: <%= @median_length %></p>
 <p>Nejdelší sezení: <%= @longest_entry %></p>
 <p>Nejkratší sezení: <%= @shortest_entry %></p>
 
