--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,3 +1,5 @@
+<% if @entry.user_id == current_user.id %>
+
 <div class="position-relative overflow-hidden p-5 p-md-5 m-md-3 bg-light">
   <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
 
@@ -22,3 +24,19 @@
 
 </div>
 </div>
+
+<% else %>
+
+<div class="position-relative overflow-hidden p-5 p-md-5 m-md-3 bg-light">
+  <div class="col-md-50 p-lg-5 mx-auto my-5 bg-custom-login">
+
+  <p>Ke čtení zápisů jiných uživatelů nemáte dostatečný přístup.</p>
+  <p>Můžete místo toho <%= link_to "jít na přehled", entries_path %> vašich zápisů, <%= link_to "vytvořit nový zápis", new_entry_path%>, nebo si <%= link_to "prohlédnout statistiky", overview_path %>. </p>
+  
+  
+
+  
+  </div>
+</div>
+
+<% end %>
