--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -1,9 +1,8 @@
 
-<div id="<%= dom_id entry %>">
+<div id="<%= dom_id entry %>" class="card p-5 m-1">
   
   <p>
-    <strong>Jméno klienta:</strong><br>
-    <%= entry.name %>
+    <h3><%= entry.name %></h3>
   </p>
 
   <p>
