--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -11,10 +11,9 @@
     <div class="col-9">
       <%= render @entry %>
       <%= link_to "Upravit zápis", edit_entry_path(@entry), class: "btn btn-success" %>
+      <%= link_to "Zpět na zápisy", entries_path, class: "btn btn-warning" %>
     </div>
     <div class="col-3">
-      
-      <%= link_to "Zpět na zápisy", entries_path, class: "btn btn-warning" %><br><br>
       <%= button_to "Trvale smazat", @entry, method: :delete, class: "btn btn-danger" %>
     </div>
 
